add to using Cucumber BDD pet scenarios