@@ -12,7 +12,6 @@ import model.Tag;
 import org.testng.annotations.Test;
 
 import java.io.File;
-import java.util.Arrays;
 import java.util.List;
 
 public class UploadPetImageTests extends BaseTest {
@@ -20,12 +19,11 @@ public class UploadPetImageTests extends BaseTest {
 
     @Test
     public void testUploadPetImage() throws JsonProcessingException {
-        List<String> photos = List.of("https://example.com/photo1.jpg");
         Pet pet = new Pet.Builder()
                 .setCategory(Category.createCategoryCats())
                 .setName("Mur")
-                .setPhotoUrls(photos)
-                .setTags(Arrays.asList(new Tag(1, "Nice"), new Tag(2, "Black")))
+                .setPhotoUrls(List.of("https://example.com/photo1.jpg"))
+                .setTags(List.of(new Tag(1, "Nice"), new Tag(2, "Black")))
                 .setStatus(PetStatus.AVAILABLE)
                 .build();
 
